# toolforge-mcp

./: .gitignore  CLAUDE.md  LICENSE  README.md  SPEC.md  mcp.servers.eval.json  mcp.servers.flaky.json  mcp.servers.json  pyproject.toml
.claude/: settings.json
.claude/agents/: code-reviewer.md  spec-guardian.md  test-writer.md
.claude/commands/: review.md  spec-check.md
.claude/hooks/: block_sensitive_stage.py
.claude/skills/commit/: SKILL.md
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md
evals/: baseline_metrics.json  golden_tasks.jsonl  heuristic_tasks.jsonl  retry_recovery.py  retry_recovery_tasks.jsonl  scorers.py  selection_accuracy.py  selection_heuristic.py  solvers.py  stub_server.py  thresholds.json
scripts/: check_eval_thresholds.py  cost_report.py  update_baseline.py
src/toolforge/: app.py  config.py  main.py
src/toolforge/agent/: embedder.py  orchestrator.py  (+1 more)
tests/: conftest.py  test_chat_degraded.py  test_chat_off_domain.py  test_chat_rate_limit.py  test_chat_stream.py  test_embedder_factory.py  test_health.py  test_prompts.py  test_tools.py
tests/agent/: test_cost_ceiling.py  test_orchestrator.py  test_selector.py  test_voyage_embedder.py
tests/evals/: test_scorer.py  test_stub_server.py
tests/guardrails/: test_credentials.py  test_off_domain.py  test_payload.py
tests/mcp_pool/: test_catalog_cache_redis.py  test_config_env.py  test_pool_live_github.py
tests/models/: test_trace.py
tests/observability/: test_metrics.py
tests/scripts/: test_check_eval_thresholds.py  test_cost_report.py  test_update_baseline.py
(+19 files in other folders)
