[project]
name = "toolforge"
version = "1.0.0"
description = "MCP client agent for developer productivity workflows"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.43.0",
    "mcp>=1.6.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "opentelemetry-sdk>=1.20.0",
    "jsonschema>=4.0.0",
    "httpx>=0.27.0",
    "redis>=5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "anyio>=4.0.0",
    "pytest-httpx>=0.30.0",
    "fakeredis>=2.20",
]
eval = [
    "inspect-ai>=0.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/toolforge"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "unit: pure functions, Pydantic schemas, validators (fast, default)",
    "integration: orchestration loop with mocked Anthropic + MCP clients",
    "recorded: integration with recorded MCP fixtures (slower, replayable)",
    "live: hits real Anthropic API or live MCP servers (skipped by default; opt-in via --live)",
]
addopts = "-m 'not live'"

[dependency-groups]
dev = [
    "ruff>=0.15.12",
]
